# foggy-data-mcp-bridge-python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: sync-mcp-schemas.md
docs/: fsscript-migration-report.md  migration-progress.md  response-to-odoo-api-mismatch-2026-03-21.md
docs/8.2.0.beta/: M10-Python-CTE-TimeWindow-Coverage-Status.md  M6-SQLCompilation-Java-execution-prompt.md  M6-SQLCompilation-Python-execution-prompt.md  M7-ScriptTool-Java-execution-prompt.md  M7-ScriptTool-Python-execution-prompt.md  P0-ComposeQuery-QueryPlan派生查询与关系复用规范-progress.md  P0-ComposeQuery-QueryPlan派生查询与关系复用规范-代码清单.md  P0-ComposeQuery-QueryPlan派生查询与关系复用规范-实现规划.md  P0-ComposeQuery-QueryPlan派生查询与关系复用规范-需求.md  README.md
docs/backlog/: B-01-response-pagination-alignment.md  B-02-jsonb-caption-embedded-fix.md  B-03-v13-engine-bare-dimension-tightening.md  README.md
docs/v1.0/: P0-DSL切片list算子value契约收口-需求.md  P0-Odoo本地模型注册中心消费契约-code-inventory.md  P0-Odoo本地模型注册中心消费契约-execution-prompt.md  P0-Odoo本地模型注册中心消费契约-implementation-plan.md  P0-Odoo本地模型注册中心消费契约-progress.md  P0-Odoo本地模型注册中心消费契约-需求.md
docs/v1.10/: P0-Pivot-9.2-Followup-Code-Inventory.md  P0-Pivot-9.2-Followup-Implementation-Plan.md  P0-Pivot-9.2-Followup-Requirement.md  P0-Pivot-9.2-Followup-progress.md  README.md
docs/v1.11/: README.md  (+2 more)
scripts/: audit_qm_formulas.py  check-model-drift.py  pull-odoo-models.py  restart_server.py  sync_mcp_schemas.py
tests/: __init__.py  test_column_governance.py  test_formula_security.py  test_metadata_v3_cross_model_governance.py  test_physical_column_governance.py
(+528 files in other folders)
